# MELODY

./: CONTRIBUTING.md  Flower.AI Setup.md  README.md  TODO.MD  pyproject.toml  requirements.txt
.github/workflows/: build-executable.yml
src/melody/: __main__.py  cli.py  melody.py
src/melody/config/: __init__.py  configSetup.py  sample_config.toml
src/melody/helpers/: __init__.py  melodyLogging.py  melodySourceControl.py
src/melody/helpers/rocrates/: __init__.py  rocrates.py
src/melody/list/: __init__.py  list.py
src/melody/log/: __init__.py  log.py
src/melody/pull/: __init__.py  pull.py
src/melody/run/: __init__.py  run.py
src/melody/stop/: __init__.py  stop.py
